# TRELLIS

./: .gitignore  README.md  Trellis_Final.ipynb  Trellis_UV.ipynb  api_server.py  clear.py  generate.py  generate_multi.py  minExample.py  pyproject.toml  trellis_api_server.py
webapp/: __init__.py  app.py  app2.py  pyproject.toml
webapp/static/: app.js  index.html  result.html  result.js  styles.css
